--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Com o combo+ você pode aproveitar a Alura+ e o Alura Língua por um preço único. </h1>
         <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua">
         <a href="www.alura.com.br" class="container__botão"> Assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botão botao_secundario">Assinar somente o Alura+</a>
+        <p class="container__aviso"> "O preço pode variar caso a assinatura seja feita em outros planos."</p>
     </section>
     
 </body>
