--- a/index.html
+++ b/index.html
@@ -12,13 +12,32 @@
 </head>
 
 <body>
-    <section class="principal container">]
+    <section class="principal container">
+  <div class="container__caixa">
         <h1>Com o combo+ você pode aproveitar a Alura+ e o Alura Língua por um preço único. </h1>
         <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua">
         <a href="www.alura.com.br" class="container__botão"> Assine por 12x de R$ 120,00*</a>
         <a href="www.alura.com.br" class="container__botão botao_secundario">Assinar somente o Alura+</a>
         <p class="container__aviso"> "O preço pode variar caso a assinatura seja feita em outros planos."</p>
+  </div>
     </section>
-    
+
+
+    <section class="container__secundario">
+    <img src="img/Plataforma.png" atl="Um monitor e um celulr com a alura plus aberta" class="secundario__imagem">
+    <div class="container__descricao">
+      <h2 class="descricao__titulo">Assista do seu jeito</h2>
+      <p class="descricao__texto">Aproveite a tela grande na TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+    </div>
+</section> 
+
+
+    <section class="container secundario"></section>
+    <div class="container__descricao">
+        <p class="descricao__texto">
+            Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+        </p>
+
+    </div>
 </body>
 </html>
